// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency-side-bar 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium">
    <gui-git-fork-icon
      size="22"
      classname="mr-3 rotate-180"
    >
    </gui-git-fork-icon>
    Dependencies
  </div>
  <gui-side-item
    item="[object Object]"
    idx="0"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="[object Object]"
    idx="1"
    dependencies="true"
  >
  </gui-side-item>
  <gui-side-item
    item="[object Object]"
    idx="2"
    dependencies="true"
  >
  </gui-side-item>
</div>

`;

exports[`dependency-side-bar no items 1`] = `

<div>
  <div class="text-md flex flex-row items-center pt-6 font-medium">
    <gui-git-fork-icon
      size="22"
      classname="mr-3 rotate-180"
    >
    </gui-git-fork-icon>
    Dependencies
  </div>
</div>

`;
